--- a/home.html
+++ b/home.html
@@ -40,7 +40,7 @@
 			<!-- empty column -->
 		</div>
 		<div class="col-md-5">
-			<img src="img/logo.jpg" alt="VD logo" />
+			<img class="img-responsive img-rounded center-block" src="img/logo.jpg" alt="VD logo" />
 		</div>		
 		<div class="col-md-5">
 			<div class="well">
@@ -60,7 +60,7 @@
             <tr>
               <td>neu5</td>
               <td>
-              	<audio controls>
+								<audio controls>
 								  <source src="sound/neu5.mp3" type="audio/mpeg">
 									Your browser does not support the html5 audio element.
 								</audio>
