--- a/home.html
+++ b/home.html
@@ -15,6 +15,7 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+<!--
 <nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
@@ -32,9 +33,10 @@
         <li><a href="#about">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
-    </div><!--/.nav-collapse -->
+    </div>
   </div>
 </nav>
+-->
 <div class="container-fluid">	
   <div class="row"><!-- begin row -->
 		<div class="col-md-1">
