--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 		<div class="col-md-1">
 			<!-- empty column -->
 		</div>
-		<div class="col-xs-12 col-md-5">
+		<div class="col-xs-12 col-md-5 custom-margin">
 			
 			<img class="img-responsive img-rounded center-block" src="img/logo.jpg" alt="Veiling Distress logo" />
 			
@@ -48,7 +48,7 @@
 				</div>
 				<h3>Bassist an Bord</h3>
 				<div>
-					<p class="custom-center">muss drücken im Gesicht</p>
+					<p class="text-center">muss drücken im Gesicht</p>
 				</div>
 				<h3>Links</h3>
 				<div>
@@ -60,8 +60,7 @@
 			</div>
 		</div>
 		
-		<div class="col-xs-12 col-md-5">
-			
+		<div class="col-xs-12 col-md-5 custom-margin">
 			<div class="well">
         <div class="row">
 					<div class="col-xs-6 col-md-3">
