--- a/home.html
+++ b/home.html
@@ -138,6 +138,28 @@
 				  <dd>Rostock</dd>
 				</dl>
     	</div>
+    	<div class="well">
+	    	<div class="panel panel-default">
+				  <div class="panel-heading">
+				    <h3 class="panel-title"><strong>Biografie</strong></h3>
+				  </div>
+				  <div class="panel-body">
+				    <p>
+					    <em>
+					    	Am grauen Strand, am grauen Meer
+					    	<br/>
+					    	Und seitab liegt die Stadt…
+							</em>
+						</p>
+						<p>
+							In Rostock entstand im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker suchten und fanden ihren Sound zwischen den zähfließenden Abgründen des Doom-Metal und den melodiösen Lichtblicken forttreibender Vielstimmigkeit. Mit der unveröffentlichen Demo-CD „Sorrow after Sunset“ (2008) sollte dieser seinen ersten Niederschlag finden – und auch seinen vorerst letzten: In den Shredsound-Studios Rostock produziert, zeugten die fünf „überlangen“ Songs von einem ureigenen kompositorischen Stil und ließen mehr davon erwarten, bevor sich das Kapitel „Acedia“ abrupt schloss.
+						</p>
+						<p>
+							Das Ende aber muss noch verschoben werden. Denn seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen an ihrem Equipment. Neue Songs entstehen, der Klang – wenn auch noch aus der zeitlichen Ferne wiederzuerkennen – hat sich verändert. Zum Sound der Vergangenheit mischt sich nun brachiales Tempo und die Brutalität von Blast Beats. Seit Mai 2015 ergänzt Sven (bass) die Gruppe um eine weitere Stimme. Eine passende menschliche Stimme wird in Zukunft die bisher rein instrumentelle Musik komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
+						</p>
+				  </div>
+				</div>
+    	</div>
 		</div>
 		<div class="col-md-1">
 			<!-- empty column -->
