changing email in info section

--- a/home.html
+++ b/home.html
@@ -43,7 +43,7 @@
 					</ul>
 					<p>Schreib uns:</p>
 					<address>
-					  <a href="mailto:veilingd@mailinator.com">veilingd@mailinator.com</a>
+					  <a href="mailto:veilingdistress@gmx.net">veilingdistress@gmx.net</a>
 					</address>
 				</div>
 				<h3>Bassist an Bord</h3>
