changing CDN imports to local files

--- a/home.html
+++ b/home.html
@@ -11,9 +11,10 @@
 	<title>Veiling Distress</title>
 	<!-- bootstrap imports -->
 	<!-- CDN imports -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+	
 	<!-- local jqueryUI imports -->
+	<link rel="stylesheet" href="css/bootstrap.min.css">
+	<link rel="stylesheet" href="css/bootstrap-theme.min.css">
 	<link rel="stylesheet" href="css/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/jquery-ui.structure.min.css">
 	<link rel="stylesheet" href="css/jquery-ui.theme.min.css">
@@ -169,9 +170,10 @@
 
 <!-- Do not put content below this line -->
 <!-- CDN imports -->
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+
 <!-- local imports -->
+<script src="js/jquery-1.11.3.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 <script src="js/jquery-ui.min.js"></script>
 <script src="js/audioplayer.min.js"></script>
 <script src="js/script.js"></script>
