bio change and bass search

--- a/home.html
+++ b/home.html
@@ -47,9 +47,18 @@
 					  <a href="mailto:veilingdistress@gmx.net">veilingdistress@gmx.net</a>
 					</address>
 				</div>
-				<h3>Bassist an Bord</h3>
+				<h3>Bassist oder Bassistin gesucht</h3>
 				<div>
-					<p class="text-center">muss drücken im Gesicht</p>
+					<p>Du könntest:</p>
+					<ul style="list-style-type:square">
+						<li>zw. 20 und 30 Jahre alt sein</li>
+						<li>Bass spielen können</li>
+						<li>zum Proben in Rostock sein</li>
+					</ul>
+					<p>Schreib uns:</p>
+					<address>
+					  <a href="mailto:veilingdistress@gmx.net">veilingdistress@gmx.net</a>
+					</address>
 				</div>
 				<h3>Links</h3>
 				<div>
@@ -175,10 +184,10 @@
 							</em>
 						</p>
 						<p>
-							In Rostock entstand im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker suchten und fanden ihren Sound zwischen den zähfließenden Abgründen des Doom-Metal und den melodiösen Lichtblicken forttreibender Vielstimmigkeit. Mit der unveröffentlichen Demo-CD „Sorrow after Sunset“ (2008) sollte dieser seinen ersten Niederschlag finden – und auch seinen vorerst letzten: In den Shredsound-Studios Rostock produziert, zeugten die fünf „überlangen“ Songs von einem ureigenen kompositorischen Stil und ließen mehr davon erwarten, bevor sich das Kapitel „Acedia“ abrupt schloss.
+							In Rostock gründete sich im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker fanden ihren Sound zwischen zähfließendem Doom und den Harmonien im Melodic Death Metal. Es folgte der Gang in die Shredsound Studios, wo die unveröffentlicht gebliebene Demo-CD „Sorrow after Sunset“ (2008) entstand, die damals zugleich auch den vorläufigen Schlusspunkt für das Projekt bedeutete.
 						</p>
 						<p>
-							Das Ende aber muss noch verschoben werden. Denn seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen an ihrem Equipment. Neue Songs entstehen, der Klang – wenn auch noch aus der zeitlichen Ferne wiederzuerkennen – hat sich verändert. Zum Sound der Vergangenheit mischt sich nun brachiales Tempo und die Brutalität von Blast Beats. Seit Mai 2015 ergänzt Sven (bass) die Gruppe um eine weitere Stimme. Eine passende menschliche Stimme wird in Zukunft die bisher rein instrumentelle Musik komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
+							Seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen am Equipment. Neue Songs entstehen – und trotz höherem Tempo und der Brutalität von Blastbeats ist der Sound der Vergangenheit noch immer Teil der Musik. Grundierender Bass und eine passende menschliche Stimme werden in Zukunft das bisher rein instrumentelle Projekt komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
 						</p>
 				  </div>
 				</div>
