removes bass search from accordeon, edits bio

--- a/home.html
+++ b/home.html
@@ -47,19 +47,6 @@
 					  <a href="mailto:veilingdistress@gmx.net">veilingdistress@gmx.net</a>
 					</address>
 				</div>
-				<h3>Bassist oder Bassistin gesucht</h3>
-				<div>
-					<p>Du könntest:</p>
-					<ul style="list-style-type:square">
-						<li>zw. 20 und 30 Jahre alt sein</li>
-						<li>Bass spielen können</li>
-						<li>zum Proben in Rostock sein</li>
-					</ul>
-					<p>Schreib uns:</p>
-					<address>
-					  <a href="mailto:veilingdistress@gmx.net">veilingdistress@gmx.net</a>
-					</address>
-				</div>
 				<h3>Links</h3>
 				<div>
 					<ul>
@@ -187,7 +174,7 @@
 							In Rostock gründete sich im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker fanden ihren Sound zwischen zähfließendem Doom und den Harmonien im Melodic Death Metal. Es folgte der Gang in die Shredsound Studios, wo die unveröffentlicht gebliebene Demo-CD „Sorrow after Sunset“ (2008) entstand, die damals zugleich auch den vorläufigen Schlusspunkt für das Projekt bedeutete.
 						</p>
 						<p>
-							Seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen am Equipment. Neue Songs entstehen – und trotz höherem Tempo und der Brutalität von Blastbeats ist der Sound der Vergangenheit noch immer Teil der Musik. Grundierender Bass und eine passende menschliche Stimme werden in Zukunft das bisher rein instrumentelle Projekt komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
+							Seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen am Equipment. Neue Songs entstehen – und trotz höherem Tempo und der Brutalität von Blastbeats ist der Sound der Vergangenheit noch immer Teil der Musik. Mit Fabian (bass) kam Ende 2015 Verstärkung in den tiefen Oktaven hinzu. Eine passende menschliche Stimme wird in Zukunft das bisher rein instrumentale Projekt komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
 						</p>
 				  </div>
 				</div>
