--- a/home.html
+++ b/home.html
@@ -157,33 +157,41 @@
 				  <dd>Rostock</dd>
 				</dl>
     	</div>
-    	<div class="well">
-	    	<div class="panel panel-default">
-				  <div class="panel-heading">
-				    <h3 class="panel-title"><strong>Biografie</strong></h3>
-				  </div>
-				  <div class="panel-body">
-				    <p>
-					    <em>
-					    	Am grauen Strand, am grauen Meer
-					    	<br/>
-					    	Und seitab liegt die Stadt…
-							</em>
-						</p>
-						<p>
-							In Rostock gründete sich im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker fanden ihren Sound zwischen zähfließendem Doom und den Harmonien im Melodic Death Metal. Es folgte der Gang in die Shredsound Studios, wo die unveröffentlicht gebliebene Demo-CD „Sorrow after Sunset“ (2008) entstand, die damals zugleich auch den vorläufigen Schlusspunkt für das Projekt bedeutete.
-						</p>
-						<p>
-							Seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen am Equipment. Neue Songs entstehen – und trotz höherem Tempo und der Brutalität von Blastbeats ist der Sound der Vergangenheit noch immer Teil der Musik. Mit Fabian (bass) kam Ende 2015 Verstärkung in den tiefen Oktaven hinzu. Eine passende menschliche Stimme wird in Zukunft das bisher rein instrumentale Projekt komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
-						</p>
-				  </div>
-				</div>
-    	</div>
 		</div>
 		<div class="col-md-1">
 			<!-- empty column -->
 		</div>	
 	</div><!-- end row -->
+	<div class="row">
+		<div class="col-md-1">
+			<!-- empty column -->
+		</div>
+		<div class="col-md-10">
+  		<div class="panel panel-default">
+			  <div class="panel-heading">
+			    <h3 class="panel-title"><strong>Biografie</strong></h3>
+			  </div>
+			  <div class="panel-body">
+			    <p>
+				    <em>
+				    	Am grauen Strand, am grauen Meer
+				    	<br/>
+				    	Und seitab liegt die Stadt…
+						</em>
+					</p>
+					<p>
+						In Rostock gründete sich im Dezember 2006 die Gruppe „Acedia“. Fünf Musiker fanden ihren Sound zwischen zähfließendem Doom und den Harmonien im Melodic Death Metal. Es folgte der Gang in die Shredsound Studios, wo die unveröffentlicht gebliebene Demo-CD „Sorrow after Sunset“ (2008) entstand, die damals zugleich auch den vorläufigen Schlusspunkt für das Projekt bedeutete.
+					</p>
+					<p>
+						Seit dem Jahr 2014 stehen Dennis (git), Stephan (git) und Marc (dru) wieder zusammen am Equipment. Neue Songs entstehen – und trotz höherem Tempo und der Brutalität von Blastbeats ist der Sound der Vergangenheit noch immer Teil der Musik. Mit Fabian (bass) kam Ende 2015 Verstärkung in den tiefen Oktaven hinzu. Eine passende menschliche Stimme wird in Zukunft das bisher rein instrumentale Projekt komplettieren. Was jetzt in Rostock entsteht, ist „Veiling Distress“.
+					</p>
+			  </div>
+			</div>
+		</div>
+		<div class="col-md-1">
+			<!-- empty column -->
+		</div>
+	</div>
 </div><!-- Container-Abschluss -->
 
 <!-- Do not put content below this line -->
