fixed to like fb page

--- a/backup/home.html
+++ b/backup/home.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
-<body ng-controller="SiteController as site">
+<body>
 
 <div class="container-fluid">
 	
